--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -49,8 +49,13 @@ Thesis for \ifdef\PhD{Doctor of Philosophy}{Master of Science} Degree\\
 \SelectFontsize{20}{中華民國\YearMonth中文}
 \end{center}
 
+\newpage
+\begin{figure}[H]
+    \centering 
+    \includegraphics[width=\textwidth]{images/口試合格證明.pdf}
+\end{figure}
 
-
+% 不會執行
 \ifdefined\optCommittee
 \newpage
 \begin{center}
