--- a/thesis.tex
+++ b/thesis.tex
@@ -30,6 +30,7 @@
 \usepackage{enumerate}
 \usepackage{graphicx}
 \usepackage{caption}
+\usepackage{pdfpages}
 \usepackage{subcaption}
 \graphicspath{ {./images/} }
 
