--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -185,7 +185,11 @@ Chairman: \SignatureRule[8]
 
 \vspace{4mm}
 \Acknowledgements
-
+\begin{flushright}
+    \Student中文 謹誌於 \\
+    國立成功大學 \\
+    中華民國 112 年 7 月
+\end{flushright}
 
 
 \renewcommand{\contentsname}{CONTENTS}
