--- a/thesis.tex
+++ b/thesis.tex
@@ -2,7 +2,7 @@
 
 \addbibresource{thesis.bib}
 
-\newcommand*\Department中文{資訊工程學研究所}
+\newcommand*\Department中文{資訊工程學系}
 \newcommand*\Department英文{Institute of Computer Science and Information Engineering}
 
 \newcommand*\ThesisTitle中文{使用深度強化學習提升物件偵測性能}
